# airfrog

./: .gitignore  BUILD.md  CHANGELOG.md  Cargo.toml  LICENCE  README.md  RELEASE.md  build.rs
.github/workflows/: rust_ci.yml
airfrog/: Cargo.toml  README.md  build.rs  partitions.csv
airfrog-bin/: Cargo.toml
airfrog-bin/src/: lib.rs
airfrog-core/: Cargo.toml
airfrog-core/src/: lib.rs  rp.rs  stm.rs
airfrog-core/src/arm/: ap.rs  dp.rs  map.rs  mod.rs  register.rs
airfrog-swd/: Cargo.toml
airfrog-swd/src/: bin.rs  debug.rs  interface.rs  lib.rs  protocol.rs
airfrog-util/: Cargo.toml
airfrog-util/src/: lib.rs  net.rs
airfrog/assets/: browser.html  config_update.js  footer.html  memory.css  memory.js  rtt.html  rtt.js  style.css
airfrog/assets/firmware/: oneromlab_readrom.js
airfrog/src/: config.rs  device.rs  error.rs  flash.rs  macros.rs  main.rs
airfrog/src/firmware/: assets.rs  mod.rs  one_rom.rs  one_rom_lab.rs  onerom.rs  onerom_lab.rs  rtt.rs  sdrr.rs  types.rs
airfrog/src/http/: assets.rs  html.rs  json.rs  mod.rs  server.rs
airfrog/src/http/html/: build.rs  mod.rs
airfrog/src/rtt/: mod.rs
artwork/: airfrog_dark_bg_300.xcf  airfrog_dark_bg_full.xcf
ci/: check.sh
docs/: BINARY-API.md  FAQ.md  REST-API.md  SOFTWARE.md  SWD.md  TECHNICAL.md
examples/: README.md  bulk-read.rs  erase-stm32f4.rs  flash-write.rs  gpio-stm32f4.rs  mqtt.rs  sdrr-bank-switch.rs  swd-basic.rs  swd-multi-drop.rs  swd-speed.rs
examples/scripts/: graph_mqtt.py
extras/retro/: af-c64.bas  build.sh
pcb/: README.md
pcb/airfrog-rev-a2/: README.md
pcb/airfrog-rev-a2/fab/: airfrog-rev-a2-bom.csv  airfrog-rev-a2-top-pos.csv
pcb/airfrog-rev-b/: README.md
pcb/airfrog-rev-b/fab/: airfrog-rev-b-bom.csv  airfrog-rev-b-top-pos.csv
scripts/: serial.sh
scripts/test/api/binary/: sys-reset.py
scripts/test/api/rest/: sys-reset.sh
scripts/utils/: stm32f4-perf-check.py
tools/: run.sh  serial.sh
