[package]
edition = "2024"
name    = "airfrog"
version = "0.1.2"
authors = ["Piers Finlayson <piers@piers.rocks>"]
description = "Tiny wireless ARM programmer.  $3 WiFi module.  Written in Rust."
repository = "https://github.com/piersfinlayson/airfrog"
readme = "../README.md"
license = "MIT"
keywords = ["embedded", "airfrog", "swd", "arm", "stm32"]
categories = [
    "embedded",
    "hardware-support", 
    "network-programming",
    "development-tools",
]

[[bin]]
name = "airfrog"
path = "./src/main.rs"

[features]
default = [ "wifi", "wifi-sta", "rest", "www", "bin-api" ]
wifi-log = [ "esp-wifi/log-04" ]
wifi = []
wifi-sta = [] # AF_STA_SSID and AF_STA_PASSWORD required
httpd = [ "wifi", ]
rest = [ "httpd", ]
www = [ "httpd", ]
bin-api = [ "wifi", ]

[dependencies]
airfrog-core = { path = "../airfrog-core", version = "0.1.2" }
airfrog-swd = { path = "../airfrog-swd", version = "0.1.2" }
airfrog-bin = { path = "../airfrog-bin", version = "0.1.2" }
airfrog-util = { path = "../airfrog-util", version = "0.1.2" }

esp-bootloader-esp-idf = "0.1"
esp-hal = { version = "=1.0.0-rc.0", features = [
  "esp32c3",
  "unstable",
] }
esp-storage = { version = "0.7", features = ["esp32c3"] }
embedded-storage    = "0.3.1"
esp-alloc = "0.8.0"
esp-backtrace = { version = "0.17.0", features = [
  "esp32c3",
  "exception-handler",
  "panic-handler",
  "println",
] }
esp-println = { version = "0.15", features = ["esp32c3", "log-04"] }
critical-section = "1.2"
embassy-executor = { version = "0.7", features = [ "nightly" ] }
embassy-sync = { version = "0.7.0" }
embassy-time = { version = "0.5.0" }
embassy-futures = { version = "0.1.1" }
esp-hal-embassy = { version = "0.9", features = [ "esp32c3" ] }
esp-wifi = { version = "0.15", features = [
  "builtin-scheduler",
  "esp-alloc",
  "esp32c3",
  "wifi",
] }
embassy-net = { version = "0.7.0", features = [
  "dhcpv4",
  "log",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
static_cell = { version = "2.1.0", features = ["nightly"] }
riscv = { version = "0.14.0" }

log = "0.4.27"

serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
static_assertions = "1.1"

sdrr-fw-parser = { path = "../../software-defined-retro-rom/rust/sdrr-fw-parser", version = "0.4.2", default-features = false }
strum = { version = "0.27.2", default-features = false, features = ["derive"] }

httparse = { version = "1.10.1", default-features = false }
crc = "3.3"
heapless = "0.8"
leasehund = "0.2"
edge-captive = "0.6"
edge-nal-embassy = "0.6"

[build-dependencies]
built = "0.8"
csv = "1.3"
jiff = { version = "0.2.13", default-features = false, features = ["std"] }
minify-html = "0.16"
minify-js = "0.6"
swc_ecma_minifier = "30"
swc_ecma_parser = "23"
swc_common = "14"
swc_ecma_codegen = "17"
swc_ecma_ast = "15"
